--- a/amplify.yml
+++ b/amplify.yml
@@ -4,12 +4,15 @@ frontend:
     preBuild:
       commands:
         - echo "Installing dependencies..."
+        - rm -rf node_modules
         - npm install --legacy-peer-deps
     build:
       commands:
         - npm run build --prod
         - echo "Build completed. Checking output directory..."
         - ls -la dist/exm/browser
+        - rm -rf ~/.npm   
+        - rm -rf node_modules/.cache
   artifacts:
     baseDirectory: dist/exm/browser
     files:
@@ -17,8 +20,6 @@ frontend:
   cache:
     paths:
       - node_modules/**/*
-      - .angular/cache/**/*
-      - .npm/**/*
 customHeaders:
   - pattern: '**/*'
     headers:
